--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,5 @@
-# Checkpoints
+# See http://help.github.com/ignore-files/ for more about ignoring files.
+
+# compiled output
 /.ipynb_checkpoints
+/config/config.json
