--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
 # compiled output
-/.ipynb_checkpoints
-/config/config.json
+.ipynb_checkpoints/
+**/config.json
